# PolarbearPlus

./: .cruft.json  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.md.rej  pyproject.toml  pyproject.toml.rej
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml
datamodules/: singleassaydatamodule.py  snaredatamodule.py
docs/: api.md  conf.py  contributing.md
docs/notebooks/: example.ipynb
experiments/atacvae/: settings_polarbear.yaml
experiments/inntranslator/: atac2rna_doublesample_v1.yaml  atac2rna_latent_v1.yaml  atac2rna_sample_v1.yaml  rna2atac_doublesample_v1.yaml  rna2atac_latent_v1.yaml  rna2atac_sample_v1.yaml
experiments/mlptranslator/: settings_polarbear_atac2rna.yaml  settings_polarbear_rna2atac.yaml  settings_sane_atac2rna.yaml  settings_sane_rna2atac.yaml
experiments/rnavae/: settings_polarbear.yaml
notebooks/: analysis_utils.py  atac_auroc.ipynb  load_data_for_analysis.py  rna_ci.ipynb  rna_corr_latent_embed.ipynb
notebooks/data/diffexp/: adultbrainfull50_rna_outer_genes.txt  snareseq_anno copy.csv
notebooks/data/split/: idx_test.txt
scripts/: atacvae.py  mlptranslator.py  rnavae.py  translator.py
src/polarbearplus/: __init__.py
src/polarbearplus/_translator/: __init__.py  base.py  inntranslator.py  mlptranslator.py
src/polarbearplus/_utils/: __init__.py  dictlogger.py  mlp.py  predictsamplingmixin.py  statswriter.py
src/polarbearplus/_vae/: __init__.py  atacvae.py  mlp.py  rnavae.py  scalelatentmessenger.py  vaebase.py
src/polarbearplus/dataloader/: _snare_dataloader.py
src/polarbearplus/datamodules/: __init__.py  singleassaydatamodule.py  snaredatamodule.py  utils.py
tests/: test_basic.py
